--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/highcharts": "^5.0.34",
     "highcharts": "^6.2.0",
+    "jquery": "^3.3.1",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
+    "@types/jquery": "^3.3.24",
     "@types/mocha": "^5.2.4",
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-typescript": "^3.2.0",
