--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@types/highcharts": "^5.0.34",
+    "ant-design-vue": "^1.1.10",
+    "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0",
     "highcharts": "^6.2.0",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.6",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
