--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "highcharts": "^6.2.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
+    "pubsub-js": "^1.7.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
