--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@types/echarts": "^4.1.3",
     "@types/highcharts": "^5.0.34",
+    "@types/pubsub-js": "^1.5.18",
     "ant-design-vue": "^1.1.10",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "echarts": "^4.2.0-rc.2",
     "font-awesome": "^4.7.0",
     "highcharts": "^6.2.0",
+    "iview": "^3.1.5",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
     "pubsub-js": "^1.7.0",
