--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "font-awesome": "^4.7.0",
     "highcharts": "^6.2.0",
     "jquery": "^3.3.1",
+    "moment": "^2.23.0",
     "popper.js": "^1.14.6",
     "pubsub-js": "^1.7.0",
     "vue": "^2.5.17",
