--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "upload": "node ./build/scp2tomcat",
+    "publish": "npm run build && npm run upload"
   },
   "dependencies": {
     "@types/echarts": "^4.1.3",
@@ -41,6 +43,7 @@
     "chai": "^4.1.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "scp2": "^0.5.0",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.17"
   },
