--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "publish": "npm run build && npm run upload"
   },
   "dependencies": {
+    "@types/d3": "^5.5.0",
+    "@types/d3-interpolate": "^1.3.0",
+    "@types/d3-scale": "^2.1.0",
     "@types/echarts": "^4.1.3",
     "@types/highcharts": "^5.0.34",
     "@types/pubsub-js": "^1.5.18",
     "ant-design-vue": "^1.1.10",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "d3": "^5.7.0",
+    "d3-interpolate": "^1.3.2",
+    "d3-scale": "^2.1.2",
     "echarts": "^4.2.0-rc.2",
     "font-awesome": "^4.7.0",
     "highcharts": "^6.2.0",
