--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "font-awesome": "^4.7.0",
     "highcharts": "^6.2.0",
     "jquery": "^3.3.1",
+    "material-design-icons": "^3.0.1",
+    "material-design-lite": "^1.3.0",
     "moment": "^2.23.0",
     "popper.js": "^1.14.6",
     "pubsub-js": "^1.7.0",
