--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "upload": "node ./build/scp2tomcat",
-    "publish": "npm run build && npm run upload"
+    "upload2": "node ./build/scp2tomcat2",
+    "publish": "npm run build && npm run upload",
+    "publish2": "npm run build && npm run upload2"
   },
   "dependencies": {
     "@types/d3": "^5.5.0",
