--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "d3-scale": "^2.1.2",
     "echarts": "^4.2.0-rc.2",
     "font-awesome": "^4.7.0",
-    "highcharts": "^6.2.0",
+    "highcharts": "^7.0.2",
+    "highcharts-oldie": "^0.1.7",
     "jquery": "^3.3.1",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
