--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/d3-scale": "^2.1.0",
     "@types/echarts": "^4.1.3",
     "@types/highcharts": "^5.0.34",
+    "@types/js-cookie": "^2.2.1",
     "@types/pubsub-js": "^1.5.18",
+    "@types/qs": "^6.5.1",
     "ant-design-vue": "^1.1.10",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
@@ -30,11 +32,13 @@
     "highcharts": "^7.0.2",
     "highcharts-oldie": "^0.1.7",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
     "moment": "^2.23.0",
     "popper.js": "^1.14.6",
     "pubsub-js": "^1.7.0",
+    "qs": "^6.6.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-cookies": "^1.5.12",
