--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/echarts": "^4.1.3",
     "@types/highcharts": "^5.0.34",
     "@types/js-cookie": "^2.2.1",
+    "@types/mockjs": "^1.0.2",
     "@types/pubsub-js": "^1.5.18",
     "@types/qs": "^6.5.1",
     "ant-design-vue": "^1.3.5",
@@ -35,6 +36,7 @@
     "js-cookie": "^2.2.0",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
+    "mockjs": "^1.0.1-beta3",
     "moment": "^2.23.0",
     "popper.js": "^1.14.6",
     "pubsub-js": "^1.7.0",
